Basic cryptohome/cloud interaction, stubs for error messages in UI.
BUG=176277
TBR=brettw@chromium.org


Review URL: https://chromiumcodereview.appspot.com/12379048

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@186478 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/chromeos/login/screen_locally_managed_user_creation.css
+++ b/resources/chromeos/login/screen_locally_managed_user_creation.css
@@ -10,3 +10,27 @@
   padding: 70px 17px 50px;
   width: 704px;
 }
+
+
+#managed-user-creation-flow-success-title {
+  font-size: x-large;
+}
+
+#managed-user-creation-flow-success-image {
+  background-color: #d3d3d3;
+  color: gray;
+  height: 300px;
+  margin-top: 25px;
+  width: 400px;
+}
+
+#managed-user-creation-flow-success-image-text {
+  color: gray;
+  margin-left: 25px;
+  margin-top: 25px;
+  text-align: center;
+}
+
+#managed-user-creation-flow-success-email-instructions {
+  margin-top: 12px;
+}
