History: Add notification at the top when full history sync is enabled.
When full history sync is enabled, show a notification at the top of
the screen, with a link to learn more. When we are unable to fetch
results from the server, use the same style of notification.

BUG=180277

Review URL: https://codereview.chromium.org/12462005

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@186702 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/history/history.css
+++ b/resources/history/history.css
@@ -46,6 +46,22 @@ html[dir=rtl] #lock-unlock-button {
   top: 3px;
 }
 
+#notification-bar {
+  float: right;
+  padding-bottom: 4px;
+  padding-top: 4px;
+}
+
+html[dir=rtl] #notification-bar {
+  float: left;
+}
+
+#notification-bar:not(.warning) {
+  background-color: inherit;
+  border: 1px solid transparent;
+  box-shadow: none;
+}
+
 #editing-controls,
 #filter-controls,
 #results-display {
