Adds animation on a hovered directory/volume when dragging files in Files.app
To give more visible feedback, an animation has been added. The target directory blinks three times before it is opened. Along the way, now the directories which can't accept files are not openable.

TEST=Drag a file to some directory on a different volume.
BUG=137980


Review URL: https://chromiumcodereview.appspot.com/12677002

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@187245 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/file_manager/css/file_manager.css
+++ b/resources/file_manager/css/file_manager.css
@@ -684,6 +684,18 @@ body[type='full-page'] list .filename-label > :hover,
   text-decoration: underline;
 }
 
+.breadcrumb-path.accepts {
+  -webkit-animation: acceptsBlinkText 200ms linear 1s 3;
+}
+
+@-webkit-keyframes acceptsBlinkText {
+  0% {
+    color: white;
+  }
+  50% {
+  }
+}
+
 .img-container > img {
   -webkit-user-drag: none;
   position: absolute;
@@ -846,6 +858,20 @@ body[type='full-page'] .thumbnail-grid .thumbnail-bottom {
 #list-container.nohover grid > .accepts {
   background-color: transparent;
   border-color: transparent;
+}
+
+#roots-list > .accepts,
+#list-container list > .accepts,
+#list-container grid > .accepts {
+  -webkit-animation: acceptsBlink 200ms linear 1s 3;
+}
+
+@-webkit-keyframes acceptsBlink {
+  0% {
+    background-color: transparent;
+  }
+  50% {
+  }
 }
 
 .table-row-cell .filename-label,
