History: Fix alignment of history sync notification, and change strings slightly.
BUG=180957,180960


Review URL: https://chromiumcodereview.appspot.com/12871009

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@188415 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/history/history.css
+++ b/resources/history/history.css
@@ -57,6 +57,7 @@ html[dir=rtl] #notification-bar {
 }
 
 #notification-bar:not(.warning) {
+  -webkit-padding-end: 0;
   background-color: inherit;
   border: 1px solid transparent;
   box-shadow: none;
