Add quicklinks to top-bar-view of about:net-internals
BUG=235881

Review URL: https://codereview.chromium.org/14503012

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@196776 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/net_internals/status_view.css
+++ b/resources/net_internals/status_view.css
@@ -20,6 +20,18 @@
   display: -webkit-flex;
 }
 
+.capture-status-view-link,
+.capture-status-view-link:visited,
+.capture-status-view-link:active {
+  color: white;
+  text-decoration: none;
+}
+
+.capture-status-view-link:hover {
+  color: white;
+  text-decoration: underline;
+}
+
 /* Completely un-style the SELECT. Will place an arrow over it manually. */
 #capture-status-view-actions {
   -webkit-appearance: none;
