Change how attempted visits are shown
Attempted visits are no longer shown using labels but instead use an icon, some
text and a link to the blocked page.

BUG=228778
R=dubroy@chromium.org,jhawkins@chromium.org

Review URL: https://chromiumcodereview.appspot.com/14471036

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@197051 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/history/history.css
+++ b/resources/history/history.css
@@ -325,10 +325,15 @@ html[dir='rtl'] .site-domain {
   color: rgb(148, 148, 148);
 }
 
-.blocked-visit {
-  border: 1px solid rgb(211, 0, 0);
-  background-color: rgb(255, 197, 105);
-  color: rgb(54, 54, 54);
+/* TODO(sergiu): If this is the final icon replace it with a separate resource.
+ */
+.blocked-indicator {
+  background: url(../ssl_roadblock_icon.png) no-repeat;
+  background-size: 30%;
+}
+
+.blocked-indicator .title {
+  color: rgb(151, 156, 160);
 }
 </if>
 
