--- a/resources/history/other_devices.css
+++ b/resources/history/other_devices.css
@@ -6,12 +6,9 @@
   width: 738px;  /* Same as body.uber-frame header max-width */
 }
 
-.devices-row {
-  float: left;
-}
-
 .device {
-  float: left;
+  display: inline-block;
+  vertical-align: top;
   width: 246px;  /* 1/3 of body.uber-frame header max-width. */
 }
 
