--- a/resources/inspect/inspect.css
+++ b/resources/inspect/inspect.css
@@ -5,9 +5,10 @@
  */
 
 body {
+  color: rgb(48, 57, 66);
   font-family: Arial, sans-serif;
   font-size: 12px;
-  margin: 10px;
+  margin: 20px;
   min-width: 47em;
   padding-bottom: 65px;
 }
@@ -20,25 +21,32 @@ img {
 }
 
 .section {
-  background-color: rgb(235, 239, 249);
-  border-top: 1px solid rgb(181, 199, 222);
-  font-weight: bold;
+  border-bottom: 1px solid #eee;
+  font-size: 1.5em;
   margin: 10px 0 0;
   padding: 2px 2px;
 }
 
 .small-section {
-  background-color: rgb(240, 244, 253);
   font-weight: bold;
   margin: 5px 0 0;
   padding: 2px 2px;
 }
 
 .row {
-  border-bottom: 1px solid #A0A0A0;
   padding: 5px;
 }
 
 .url {
   color: #A0A0A0;
+}
+
+.list {
+  margin-bottom: 20px;
+  margin-top: 5px;
+}
+
+a {
+  color: rgb(17, 85, 204);
+  text-decoration: none;
 }
