Add an icon and separator on GAIA screen
BUG=229762
NOTRY=true
R=ygorshenin@chromium.org

Review URL: https://chromiumcodereview.appspot.com/14542002

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@197351 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/chromeos/login/screen_gaia_signin.css
+++ b/resources/chromeos/login/screen_gaia_signin.css
@@ -103,3 +103,18 @@
   -webkit-box-pack: center;
   display: -webkit-box;
 }
+
+#createManagedUserSeparator {
+  background-color: rgba(128,128,128,0.3);
+  height: 1px;
+  width: 200px;
+}
+
+#createManagedUserLogo {
+  font-weight: bold;
+  margin-top: 16px;
+}
+
+#createManagedUserLinkPlaceholder {
+  margin-top: 10px;
+}
