Visual and key mapping fixes to support OOBE on devices driven exclusively with keyboard: - more prominent input element border halo - mapping of left/right arrows to tab/shift+tab - added special gaia auth manifest to inject needed  decoration into sign-in page (TODO: replace with template change on GAIA side)
BUG=235249
TEST=updated KioskOemManifestParserTest.LoadTest
R=sky@chromium.org, xiyuan@chromium.org

Review URL: https://codereview.chromium.org/14113048

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@197749 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/chromeos/login/oobe_screen.css
+++ b/resources/chromeos/login/oobe_screen.css
@@ -153,3 +153,12 @@ html[dir=rtl] .step-extra-controls {
   position: relative;
   width: 250px;
 }
+
+html[highlight=strong] #security-info a:focus,
+html[highlight=strong] #eula a:focus,
+html[highlight=strong] .step-extra-controls a:focus,
+html[highlight=strong] .menu-control:focus,
+html[highlight=strong] input[type='button']:focus,
+html[highlight=strong] button:focus {
+  box-shadow: 0 0 23px rgb(77, 144, 254) !important;
+}
