Files.app: Fixed a position of icon in the tasks menu
Originally, the icon of tasks menu item is located at the right of menu and
no space is inserted for the icon.
This CL moves the icon to the left edge of menu and inserts space in order not to overlap the text label and the icon.

BUG=237157
TEST=Open tasks menu and check the position of icon

Review URL: https://chromiumcodereview.appspot.com/14846005

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@197919 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/file_manager/css/file_manager.css
+++ b/resources/file_manager/css/file_manager.css
@@ -1595,23 +1595,9 @@ body[new-ui] #list-container li.table-row {
   display: none;
 }
 
-.task-item {
-  -webkit-box-align: center;
-  -webkit-box-orient: horizontal;
-  display: -webkit-box;
-  padding: 5px 10px 4px;
-  text-align: left;
-}
-
-.task-item > div {
-  overflow: hidden;
-  padding-right: 5px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.task-item > img {
-  -webkit-margin-end: 5px;
+#tasks-menu menuitem:not(.change-default) {
+  background-position: left 10px center;
+  padding-left: 32px;
 }
 
 #preview-lines {
