--- a/resources/file_manager/css/common.css
+++ b/resources/file_manager/css/common.css
@@ -148,7 +148,7 @@ body:not([new-ui]) .buttonbar button {
   -webkit-margin-start: 8px;
   -webkit-user-select: none;
   background-color: whiteSmoke;
-  background-image: linear-gradient(top, whiteSmoke, #F1F1F1);
+  background-image: linear-gradient(to bottom, whiteSmoke, #F1F1F1);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 2px;
   box-shadow: none;
@@ -167,7 +167,7 @@ body:not([new-ui]) .buttonbar button {
 }
 
 body:not([new-ui]) .buttonbar button:hover {
-  background-image: linear-gradient(top, #F8F8F8, #F1F1F1);
+  background-image: linear-gradient(to bottom, #F8F8F8, #F1F1F1);
   border: 1px solid #C6C6C6;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   color: #222;
@@ -176,13 +176,13 @@ body:not([new-ui]) .buttonbar button:hover {
 
 body:not([new-ui]) .buttonbar button:active {
   background-color: #F6F6F6;
-  background-image: linear-gradient(top,#F6F6F6,#F1F1F1);
+  background-image: linear-gradient(to bottom, #F6F6F6, #F1F1F1);
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 body:not([new-ui]) .buttonbar button[disabled] {
   background-color: #EEE;
-  background-image: linear-gradient(top, #EEE, #E0E0E0);
+  background-image: linear-gradient(to bottom, #EEE, #E0E0E0);
   border: 1px solid #CCC;
   color: #333;
 }
