--- a/resources/file_manager/css/gallery.css
+++ b/resources/file_manager/css/gallery.css
@@ -509,20 +509,20 @@ body[new-ui] .gallery[tools][editing] *[dimmed] {
 }
 
 .gallery .toolbar .ribbon.fade-left {
-  -webkit-mask-image: linear-gradient(left, rgba(0, 0, 0, 0) 0,
-                                            rgba(0, 0, 0, 1) 40px);
+  -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0,
+                                                rgba(0, 0, 0, 1) 40px);
 }
 
 .gallery .toolbar .ribbon.fade-right {
-  -webkit-mask-image: linear-gradient(right, rgba(0, 0, 0, 0) 0,
-                                             rgba(0, 0, 0, 1) 40px);
+  -webkit-mask-image: linear-gradient(to left, rgba(0, 0, 0, 0) 0,
+                                               rgba(0, 0, 0, 1) 40px);
 }
 
 .gallery .toolbar .ribbon.fade-left.fade-right {
-  -webkit-mask-image: linear-gradient(left, rgba(0, 0, 0, 0) 0,
-                                            rgba(0, 0, 0, 1) 40px,
-                                            rgba(0, 0, 0, 1) 230px,
-                                            rgba(0, 0, 0, 0) 100%);
+  -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0,
+                                                rgba(0, 0, 0, 1) 40px,
+                                                rgba(0, 0, 0, 1) 230px,
+                                                rgba(0, 0, 0, 0) 100%);
 }
 
 .gallery .image-wrapper {
