Create separate sections for available/unavailable flags.
On Linux, searching for "this experiment is not supported" returns 23 
results. To make it a little easier to navigate, create a separate
section to list all the unsupported experiments.

BUG=179649

Review URL: https://chromiumcodereview.appspot.com/12748002

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@201015 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/flags.css
+++ b/resources/flags.css
@@ -3,7 +3,7 @@
  * found in the LICENSE file. */
 
 body {
-  margin: 10px;
+  margin: 10px 10px 0;
 <if expr="not pp_ifdef('android')">
   min-width: 47em;
 </if>
@@ -63,7 +63,11 @@ h1 {
 
 div.content {
   font-size: 88%;
-  margin-top: 5px;
+  margin: 5px auto 10px;
+}
+
+div.content:last-of-type {
+  margin-bottom: 0;
 }
 
 .section-header {
@@ -148,7 +152,7 @@ html[dir=rtl] #experiment-reset-all {
 
 .no-experiments {
   font-size: 1.2em;
-  margin: 6em 0 0;
+  margin: 6em 0;
   text-align: center;
 }
 
