Remove managed user elevation related to extensions.
BUG=241383

Review URL: https://chromiumcodereview.appspot.com/15218005

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@201020 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/extensions/extensions.css
+++ b/resources/extensions/extensions.css
@@ -287,21 +287,13 @@ html[dir='rtl'] #extension-settings .trash {
 
 /* Managed mode */
 
-.page:not(.managed-user-locked) .profile-is-managed-banner,
-.managed-user-locked .more-extensions-link,
-.page:not(.profile-is-managed) #managed-user-control-div,
-.page:not(.managed-user-locked) #unlock-button,
-.managed-user-locked #lock-button {
+.page:not(.profile-is-managed) .profile-is-managed-banner,
+.profile-is-managed .more-extensions-link {
   display: none;
 }
 
 .profile-is-managed-banner .page-banner-text {
   background-image: url('chrome://theme/IDR_WARNING');
-}
-
-#managed-user-control-div {
-  display: inline-block;
-  padding-left: 7px;
 }
 
 /* Sideload Wipeout */
