- Changed tab style - Removed line at the top.
BUG=241257

Review URL: https://chromiumcodereview.appspot.com/15176007

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@201032 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/apps_debugger/css/items.css
+++ b/resources/apps_debugger/css/items.css
@@ -15,6 +15,13 @@ hr {
   margin: 15px 0;
 }
 
+/* Override the visual style of tabs. */
+
+tabs tab {
+  min-width: 150px;
+  padding: 5px 20px;
+}
+
 /* Contents */
 
 #extension-settings {
