Redesign display options for ChromeOS.
Several new features have been added recently, and this new UI
allows users to customize them through web UI.

Updates display options page.

BUG=190897
R=oshima@chromium.org, xiyuan@chromium.org, jhawkins@chromium.org

Review URL: https://chromiumcodereview.appspot.com/14710011

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@201256 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/options/chromeos/display_options.css
+++ b/resources/options/chromeos/display_options.css
@@ -27,7 +27,6 @@
 #display-configurations {
   background-color: white;
   border-top: 1px solid lightgrey;
-  height: 65px;
   padding: 15px;
 }
 
@@ -45,28 +44,21 @@
   z-index: 1;
 }
 
-#display-options-buttons-container {
-  float: right;
-  z-index: 2;
-}
-
-html[dir=rtl] #display-options-buttons-container {
-  float: left;
-}
-
-
 #selected-display-data-container {
-  float: left;
-  line-height: 200%;
   z-index: 2;
-}
-
-html[dir=rtl] #selected-display-data-container {
-  float: right;
 }
 
 #selected-display-name {
-  font-weight: bold;
+  font-size: large;
+  font-weight: normal;
+  margin-bottom: 10px;
+  margin-top: 5px;
+  padding: 0;
+}
+
+.selected-display-option-title {
+  display: inline-block;
+  margin-right: 10px;
 }
 
 .displays-display {
@@ -88,10 +80,10 @@ html[dir=rtl] #selected-display-data-container {
   color: rgb(0, 138, 255);
 }
 
-.display-options-single-button-container {
-  padding: 5px 0;
+.display-options-button-container {
+  margin-right: 10px;
 }
 
 .display-options-button {
-  width: 120px;
+  width: 135px;
 }
