Extension errors should not need developer mode in order to be displayed
BUG=237569

Review URL: https://chromiumcodereview.appspot.com/14911002

git-svn-id: http://src.chromium.org/svn/trunk/src/chrome/browser@201297 4ff67af0-8c30-449e-8e8b-ad334ec8d88c

--- a/resources/extensions/extensions.css
+++ b/resources/extensions/extensions.css
@@ -44,7 +44,8 @@ html.loading * {
   display: none;
 }
 
-.developer-extras > div {
+.developer-extras > div,
+.permanent-warnings > div {
   margin: 5px 0;
 }
 
