--- a/resources/about_memory_linux.css
+++ b/resources/about_memory_linux.css
@@ -18,7 +18,7 @@ table.list#memoryDetails tr.firstRow th:nth-child(2) {
   border-right: 1px solid rgb(181, 198, 222);
 }
 
-<if expr="pp_ifdef('android')">
+<if expr="is_android">
 body {
   min-width: 35em;
 }
