--- a/resources/flags.css
+++ b/resources/flags.css
@@ -4,7 +4,7 @@
 
 body {
   margin: 10px 10px 0;
-<if expr="not pp_ifdef('android')">
+<if expr="not is_android">
   min-width: 47em;
 </if>
   /* Should match needs-restart.height + 5 */
